Création de l'interface de conversion, ajout des fonctionnalités de traduction message-message et txt-txt

--- a/Morse/makefile
+++ b/Morse/makefile
@@ -5,11 +5,16 @@ RM=rm -f
 testmorse : testmorse.o morse.o
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
+progmorse : progmorse.o morse.o 
+	$(CXX) $(CXXFLAGS) $^ -o $@
+
+
 %.o:%.cpp; $(CXX) $(CXXFLAGS) -o $@ -c $<
 testmorse.o : testmorse.cpp morse.h
+progmorse.o : progmorse.cpp morse.h
 morse.o : morse.cpp morse.h
 
 
 
 clean :
-	$(RM) morse.o testmorse.o
+	$(RM) morse.o testmorse.o progmorse.o morse.h.gch morsetot.o
