Ajout d'audiolib, librairie créée pour convertir les fichiers morse en audio (avec l'aide de la librairier AudioFile.h d'Adam Stark)

--- a/Morse/makefile
+++ b/Morse/makefile
@@ -5,16 +5,21 @@ RM=rm -f
 testmorse : testmorse.o morse.o
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
+testaudio : testaudio.o audiolib.o
+	$(CXX) $(CXXFLAGS) $^ -o $@
+
 progmorse : progmorse.o morse.o 
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
 
 %.o:%.cpp; $(CXX) $(CXXFLAGS) -o $@ -c $<
 testmorse.o : testmorse.cpp morse.h
+testaudio.o : testaudio.cpp audiolib.h AudioFile.h
 progmorse.o : progmorse.cpp morse.h
 morse.o : morse.cpp morse.h
+audiolib.o : audiolib.cpp audiolib.h AudioFile.h
 
 
 
 clean :
-	$(RM) morse.o testmorse.o progmorse.o morse.h.gch morsetot.o
+	$(RM) morse.o testmorse.o progmorse.o morse.h.gch morsetot.o audiolib.o testaudio.o morsetot testmorse progmorse testaudio morse
