Ajout de la fonctionnalité fichier texte à fichier morse wav, blocage sur la conversion d'un .wav audio à un .txt pour le morse...

--- a/Morse/makefile
+++ b/Morse/makefile
@@ -8,7 +8,7 @@ testmorse : testmorse.o morse.o
 testaudio : testaudio.o audiolib.o
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
-progmorse : progmorse.o morse.o 
+progmorse : progmorse.o morse.o audiolib.o
 	$(CXX) $(CXXFLAGS) $^ -o $@
 
 
